In kpanel-0.19:

    Patchlevel 8:
                - second hide button (Kalle)
                - geometry for second hide button fixed ;-) (Matthias)

    Patchlevel 7:
                - disk navigator ( Pietro Iglio )

    Patchlevel 6:
	- new configuration option: HideShowAnimation. Default is
	  10. Setting it to 0 disables the feature.
                - autohide animated
                - iconify (in combination with new kwm) animates to the taskbar button  
    Patchlevel 5: 
               - small fix (kudos to David Faure)
               - fixed possible loss of the system menu (kmenu)

    Patchlevel 4: Mario Weilguni <mweilguni@kde.org>
	- fixed kb659. Kpanel ignores unreadable applnk-directories instead of
	  crashing

    Patchlevel 3:
       - bugfixes for kmenu and minipanel

    Patchlevel 2:
       - fixed the K-menu when not placed at the first position.
       - "weekday" line above date in large-enough kpanel mode (Warwick Allison)
       - small fixes for kpanel:go and kpanel:system


    Patchlevel 1:
       - user interface active during the loading of the k-menu
       - menu editor in panel menu (needs an installed kmenuedit with
          KMenuEdit.kdelnk)
       - swallowing window titles can be regular expressions
       - bugfix in taskbar layout 

In kpanel-0.18:

    Patchlevel 12:
       - removed the internal configure dialog. Launces kcmkpanel instead.
       - fixed small bug in the clock (to the unknown developer who did the
         changes: it was broken in tiny style.)
       - fixed the docking area geometry (finally :-)

    Patchlevel 11:
       - fixed the missing-submenus bug (coolo)

    Patchlevel 10:
       - no more passive grab on swallow buttons for the left mouse
         button if the exec-line in the kdelnk-file is empty.
         Usefull for biff applications like coolmail which prefer
         to launch the mailer manually.
       - internal cleanup: uses KShellProcess now :-)
       - context popup on panel